assets/thread-phone.css
.avatar {
    padding: 0px;
    margin: 0px;
    float: left;
    max-height: 100px;
}

.post-content {
    padding: 6px;
    margin-right: 0px;
    border: 0px;
}

.userinfo, .post-content {
    color: black;
    font: normal normal normal 24px Verdana, Arial, sans-serif;
    vertical-align: top;
}

.username h4 {
    font-size: 24px;
}

.userinfo {
    padding: 5px;
    float: left;
    color: white;
    margin-left: 8px;
}

.action-button {
    float: right;
    vertical-align: middle;
    margin-right: 10px;
    margin-top: 10px;
    margin-bottom: 10px;

}

.userinfo-row {
    background: #006699;
    width:100%;
    overflow: auto;
}

.postdate {
    color: white;
    font: normal normal normal 22px Verdana, Arial, sans-serif;
}

.bbc-block h4 {
    border-top: 1px #999999 solid;
    padding: 8px 0 2px 0;
    font-size: 24px;
    font-style: italic;
    color: #555;
}

.bbc-block.code {
    overflow: auto;
}

#thread-body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    border: 0;
}

